--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -17,7 +17,7 @@
 
 .product-image {
   width: 100%;
-  height: 180px;
+  aspect-ratio: 3 / 4;
   object-fit: cover;
 }
 
@@ -74,7 +74,7 @@
 
 .product-image {
   width: 100%;
-  height: 200px;
+  aspect-ratio: 3 / 4;
   object-fit: cover;
   transition: transform 0.3s ease;
 }
